Lagt till komponenterna "arbetsplatser" och "organisation".

--- a/src/app/arbetsgivare/arbetsgivare.component.html
+++ b/src/app/arbetsgivare/arbetsgivare.component.html
@@ -1,3 +1,10 @@
-<p>
-  arbetsgivare works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-3 col-lx-3">
+      <app-arbetsplatser></app-arbetsplatser>
+    </div>
+    <div class="col-9 col-lx-9">
+      <app-organisation></app-organisation>
+    </div>
+  </div>
+</div>
