Nya komponenter och uppsnygging av HTML.

--- a/src/app/arbetsgivare/arbetsgivare.component.html
+++ b/src/app/arbetsgivare/arbetsgivare.component.html
@@ -7,4 +7,22 @@
       <app-organisation></app-organisation>
     </div>
   </div>
-</div>
+  <div class="row">
+    <div class="col-3 col-lx-3">
+      <app-kontaktpersoner></app-kontaktpersoner>
+    </div>
+    <div class="col-9 col-lx-9">
+      <app-arbetsplats></app-arbetsplats>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-lx-12">
+      <app-orders></app-orders>
+    </div>
+  </div>
+    <div class="row">
+      <div class="col-12 col-lx-12">
+        <app-tjansteanteckningar-arbetsplats></app-tjansteanteckningar-arbetsplats>
+      </div>
+    </div>
+  </div>
