--- a/src/app/arbetsgivare/organisation/organisation.component.html
+++ b/src/app/arbetsgivare/organisation/organisation.component.html
@@ -1,3 +1,19 @@
-<p>
-  organisation works!
-</p>
+
+<div class="card" style="margin-top: 10px">
+	<div class="row mt-2">
+		<div class="col-6">&nbsp;Antal anst&auml;llda</div>
+		<div class="col-6">&nbsp;Oms&auml;ttning</div>
+	</div>
+	<div class="row">
+		<div class="col-6">
+			<h4>&nbsp;{{organisation.antalAnstallda}}</h4>
+		</div>
+		<div class="col-6">
+			<h4>{{organisation.omsattning}}</h4>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-12">&nbsp;Senaste yrkesgrupper vi rekryterat</div>
+	</div>
+</div>
+<app-tjansteanteckningar-organisation></app-tjansteanteckningar-organisation>
