--- a/src/app/arbetsgivare/organisation/organisation.component.html
+++ b/src/app/arbetsgivare/organisation/organisation.component.html
@@ -1,19 +1,62 @@
-
 <div class="card" style="margin-top: 10px">
-	<div class="row mt-2">
-		<div class="col-6">&nbsp;Antal anst&auml;llda</div>
-		<div class="col-6">&nbsp;Oms&auml;ttning</div>
-	</div>
-	<div class="row">
-		<div class="col-6">
-			<h4>&nbsp;{{organisation.antalAnstallda}}</h4>
-		</div>
-		<div class="col-6">
-			<h4>{{organisation.omsattning}}</h4>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-12">&nbsp;Senaste yrkesgrupper vi rekryterat</div>
-	</div>
+  <div class="card-body">
+    <div class="row mt-2">
+      <div class="col-3 small">
+        <form class="form-inline form-horizonta">
+          <!--<label for="orgnr">Organisationsnummer&nbsp;</label>-->
+          <input type="text" class="form-control" id="orgnr" name="orgnr" placeholder="orgnr eller kundnr" [(ngModel)]="orgnr" (keyup.enter)="getOrganisation()"
+            (focusout)="getOrganisation()" />&nbsp;
+          <i class="fa fa-search"></i> &nbsp;&nbsp;
+          <!--<button type="submit" class="btn btn-primary" id="submit"
+                (click)="getOrganisation()">H&auml;mta organisation</button>-->
+          &nbsp;&nbsp;{{errorMessage}}
+        </form>
+      </div>
+      <!-- om error så skall det visas här isf orgnamn -->
+      <div class="col-8 font-weight-bold">&nbsp;{{organisation.orgnamn}}</div>
+      <div class="col-1">
+        <img class="img-responsive" height="100" width="100" src="{{organisation.logotype}}">
+      </div>
+    </div>
+
+    <div class="row mt-2">
+      <div class="col-1 font-weight-bold small">&nbsp;Orgnr</div>
+      <div class="col-1 font-weight-bold small">Kundnr</div>
+      <div class="col-1 font-weight-bold small">Orgtyp</div>
+      <div class="col-1 font-weight-bold small">Jur form</div>
+      <div class="col-1 font-weight-bold small">Duns</div>
+      <div class="col-1 font-weight-bold small">Anställda</div>
+      <div class="col-1 font-weight-bold small">Omsättning</div>
+      <div class="col-1 font-weight-bold small">Kommun</div>
+      <div class="col-1 font-weight-bold small">Län</div>
+    </div>
+    <div class="row">
+      <div class="col-1 small">&nbsp;{{organisation.orgnr}}</div>
+      <div class="col-1 small">{{organisation.kundnr}}</div>
+      <div class="col-1 small">{{organisation.orgtyp}}</div>
+      <div class="col-1 small">{{organisation.jurForm}}</div>
+      <div class="col-1 small">{{organisation.duns}}</div>
+      <div class="col-1 small">{{organisation.antalAnstallda}}</div>
+      <div class="col-1 small">{{organisation.omsattning}}</div>
+      <div class="col-1 small">{{organisation.kommun}}</div>
+      <div class="col-1 small">{{organisation.lan}}</div>
+    </div>
+    <div class="row mt-2">
+      <div class="col-2 font-weight-bold small">&nbsp;Adress</div>
+      <div class="col-2 font-weight-bold small">Postnummer</div>
+      <div class="col-2 font-weight-bold small">Postort</div>
+      <div class="col-2 font-weight-bold small">Telefon</div>
+      <div class="col-2 font-weight-bold small">Epost</div>
+      <div class="col-2 font-weight-bold small">Webbplats</div>
+    </div>
+    <div class="row">
+      <div class="col-2 small">&nbsp;{{organisation.utdelningsadress}}</div>
+      <div class="col-2 small">{{organisation.postnr}}</div>
+      <div class="col-2 small">{{organisation.postort}}</div>
+      <div class="col-2 small">{{organisation.telefon}}</div>
+      <div class="col-2 small">{{organisation.epost}}</div>
+      <div class="col-2 small">{{organisation.webbplats}}</div>
+    </div>
+  </div>
 </div>
 <app-tjansteanteckningar-organisation></app-tjansteanteckningar-organisation>
