Lagt till ny data och funktionalitet

--- a/src/app/arbetsgivare/arbetsplats/arbetsplats.component.html
+++ b/src/app/arbetsgivare/arbetsplats/arbetsplats.component.html
@@ -1,6 +1,6 @@
-<div class="card" style="margin-top: 10px">
+<div class="card" style="margin-top: 5px">
+    <h6 class="card-header">Arbetsplats</h6>
     <div class="card-body">
-
       <div class="row mt-2">
         <div class="col-3 font-weight-bold small">&nbsp;Namn</div>
         <div class="col-2 font-weight-bold small">Telefon</div>
@@ -27,4 +27,4 @@
       </div>
     </div>
   </div>
-  <app-tjansteanteckningar-organisation></app-tjansteanteckningar-organisation>
+
