--- a/src/app/arbetsgivare/kontaktpersoner/kontaktpersoner.component.html
+++ b/src/app/arbetsgivare/kontaktpersoner/kontaktpersoner.component.html
@@ -1,8 +1,8 @@
-<div class="card" style="margin-top: 10px">
+<div class="card" style="margin-top: 5px">
+  <h6 class="card-header">Arbetsplats - kontaktpersoner</h6>
   <div class="card-body ">
-    <h5>Kontaktpersoner</h5>
     <table class="table table-hover">
-      <thead>
+      <thead class="thead-light">
         <tr>
           <th scope="col" class="small">Typ</th>
           <th scope="col" class="small">Namn</th>
