--- a/src/app/arbetsgivare/arbetsplatser/arbetsplatser.component.html
+++ b/src/app/arbetsgivare/arbetsplatser/arbetsplatser.component.html
@@ -1,7 +1,12 @@
-<div class="card" style="margin-top: 10px">
-  <div class="card-body ">
-    <h5>Arbetsplatser</h5>
+<div class="card" style="margin-top: 5px">
+    <h6 class="card-header">Organisation - arbetsplatser</h6>
+  <div class="card-body">
     <table class="table table-hover">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col" class="small">Arbetsplats</th>
+        </tr>
+      </thead>
       <tbody>
         <ng-container *ngFor="let arbetsplatsMini of organisation.arbetsplatserMini">
           <tr (click)="onClick(arbetsplatsMini)">
