--- a/src/app/arbetsgivare/organisation/organisation.component.html
+++ b/src/app/arbetsgivare/organisation/organisation.component.html
@@ -1,4 +1,5 @@
-<div class="card" style="margin-top: 10px">
+<div class="card" style="margin-top: 5px">
+  <h6 class="card-header">Organisation</h6>
   <div class="card-body">
     <div class="row mt-2">
       <div class="col-3 small">
