--- a/src/app/arbetsgivare/tjansteanteckningar-organisation/tjansteanteckningar-organisation.component.html
+++ b/src/app/arbetsgivare/tjansteanteckningar-organisation/tjansteanteckningar-organisation.component.html
@@ -1,3 +1,21 @@
-<div class="card" style="margin-top: 10px">
-  tjansteanteckningar-organisation works!
+<div class="card" style="margin-top: 5px">
+  <h6 class="card-header">Organisation - tjänsteanteckningar</h6>
+  <div class="card-body">
+    <table class="table table-hover">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col" class="small">Rubrik</th>
+          <th scope="col" class="small">Text</th>
+        </tr>
+      </thead>
+      <tbody>
+        <ng-container *ngFor="let tjansteanteckning of organisation.tjansteanteckningar">
+          <tr>
+            <td class="small">{{ tjansteanteckning.rubrik }}</td>
+            <td class="small">{{ tjansteanteckning.text }}</td>
+          </tr>
+        </ng-container>
+      </tbody>
+    </table>
+  </div>
 </div>
