--- a/src/app/om/om.component.html
+++ b/src/app/om/om.component.html
@@ -1,3 +1,13 @@
 <p>
-  om works!
+  <button type="button" class="btn btn-outline-primary" (click)="toggle()"
+          [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
+    {{buttonText}}
+  </button>
 </p>
+<div id="collapseExample" [ngbCollapse]="isCollapsed">
+  <div class="card">
+    <div class="card-body">
+      You can collapse this card by clicking Toggle
+    </div>
+  </div>
+</div>
