--- a/src/app/arbetsgivare/organisation/organisation.component.html
+++ b/src/app/arbetsgivare/organisation/organisation.component.html
@@ -6,7 +6,7 @@
         <form class="form-inline form-horizonta">
           <!--<label for="orgnr">Organisationsnummer&nbsp;</label>-->
           <input type="text" class="form-control" id="orgnr" name="orgnr" placeholder="orgnr eller kundnr" [(ngModel)]="orgnr" (keyup.enter)="getOrganisation()"
-            (focusout)="getOrganisation()" />&nbsp;
+             />&nbsp;
           <i class="fa fa-search"></i> &nbsp;&nbsp;
           <!--<button type="submit" class="btn btn-primary" id="submit"
                 (click)="getOrganisation()">H&auml;mta organisation</button>-->
