--- a/src/app/om/om.component.html
+++ b/src/app/om/om.component.html
@@ -1,6 +1,6 @@
 <br>
 <p>
-  <button type="button" class="btn btn-outline-primary" (click)="toggle()"
+  <button type="button" class="btn btn-outline-primary btn-sm" (click)="toggle()"
           [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
     {{buttonText}}
   </button>
