Lade till marginal ovanför "button".

--- a/src/app/arbetsgivare/orders/orders.component.html
+++ b/src/app/arbetsgivare/orders/orders.component.html
@@ -1,7 +1,8 @@
-<br>
-<button type="button" class="btn btn-outline-primary btn-sm" (click)="toggle()" [attr.aria-expanded]="!isCollapsed" aria-controls="arbetsplats-ordrar">
-  {{buttonText}}
-</button>
+<div style="margin-top: 5px">
+  <button type="button" class="btn btn-outline-primary btn-sm" (click)="toggle()" [attr.aria-expanded]="!isCollapsed" aria-controls="arbetsplats-ordrar">
+    {{buttonText}}
+  </button>
+</div>
 <div id="arbetsplats-ordrar" class="card" style="margin-top: 5px" [ngbCollapse]="isCollapsed">
   <!--<h6 class="card-header">Arbetsplats - order</h6-->
   <div class="card-body">
