--- a/src/app/arbetsgivare/arbetsplatser/arbetsplatser.component.html
+++ b/src/app/arbetsgivare/arbetsplatser/arbetsplatser.component.html
@@ -1,5 +1,7 @@
-<div class="card" style="margin-top: 5px">
-    <h6 class="card-header">Organisation - arbetsplatser</h6>
+<button type="button" class="btn btn-outline-primary btn-sm" (click)="toggle()" [attr.aria-expanded]="!isCollapsed" aria-controls="organisation-arbetsplatser">
+  {{buttonText}}
+</button>
+<div id="organisation-arbtsplatser" class="card" style="margin-top: 5px" [ngbCollapse]="isCollapsed">
   <div class="card-body">
     <table class="table table-hover">
       <thead class="thead-light">
