--- a/src/app/arbetsgivare/kontaktpersoner/kontaktpersoner.component.html
+++ b/src/app/arbetsgivare/kontaktpersoner/kontaktpersoner.component.html
@@ -1,5 +1,7 @@
-<div class="card" style="margin-top: 5px">
-  <h6 class="card-header">Arbetsplats - kontaktpersoner</h6>
+<button type="button" class="btn btn-outline-primary btn-sm" (click)="toggle()" [attr.aria-expanded]="!isCollapsed" aria-controls="arbetsplats-kontaktpersoner">
+  {{buttonText}}
+</button>
+<div id="arbetsplats-kontaktpersoner" class="card" style="margin-top: 5px" [ngbCollapse]="isCollapsed">
   <div class="card-body ">
     <table class="table table-hover">
       <thead class="thead-light">
