Lade till visning av blank logga och org inte finns.

--- a/src/app/arbetsgivare/organisation/organisation.component.html
+++ b/src/app/arbetsgivare/organisation/organisation.component.html
@@ -17,8 +17,8 @@
         <div *ngIf="organisation.logotype != null">
           <img class="img-responsive" height="100" width="100" src="{{organisation.logotype}}">
         </div>
-        <div *ngIf="organisation.logotype === null">
-            <img class="img-responsive" height="100" width="100" src="assets/images/fafafa.png">
+        <div *ngIf="organisation.logotype == null">
+            <img class="img-responsive" height="100" width="100" src="assets/images/fafafa100x100.png">
           </div>
       </div>
     </div>
