--- a/src/app/arbetsgivare/organisation/organisation.component.html
+++ b/src/app/arbetsgivare/organisation/organisation.component.html
@@ -5,14 +5,14 @@
       <div class="col-4 small">
         <form class="form-inline form-horizonta">
           <input type="text" class="form-control" id="orgnr" name="orgnr" placeholder="orgnr eller kundnr" [(ngModel)]="orgnr" (keyup.enter)="getOrganisation()"
-          />&nbsp;
-          <!--<i class="fa fa-search"></i>-->&nbsp;&nbsp;
+          />
+          &nbsp;&nbsp;&nbsp;
+          <!--<i class="fa fa-search"></i>-->
           <button type="submit" class="btn btn-primary btn-sm" id="submit" (click)="getOrganisation()">H&auml;mta organisation</button>
-          &nbsp;&nbsp;{{errorMessage}}
         </form>
       </div>
-      <!-- om error så skall det visas här isf orgnamn -->
-      <div class="col-6 font-weight-bold">&nbsp;{{organisation.orgnamn}}</div>
+      <div *ngIf="errorMessage == null" class="col-6 font-weight-bold">&nbsp;{{organisation.orgnamn}}</div>
+      <div *ngIf="errorMessage != null" class="col-6">&nbsp;{{errorMessage}}</div>
       <div class="col-2">
         <div *ngIf="organisation.logotype != null">
           <img class="img-responsive" height="100" width="100" src="{{organisation.logotype}}">
