--- a/src/app/om/om.component.html
+++ b/src/app/om/om.component.html
@@ -1,7 +1,6 @@
 <br>
 <p>
-  <button type="button" class="btn btn-outline-primary btn-sm" (click)="toggle()"
-          [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
+  <button type="button" class="btn btn-outline-primary btn-sm" (click)="toggle()" [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
     {{buttonText}}
   </button>
 </p>
@@ -9,6 +8,33 @@
   <div class="card">
     <div class="card-body">
       You can collapse this card by clicking Toggle
+    </div>
+  </div>
+</div>
+
+<h2>Angular 2 Accordion with Bootstrap CSS</h2>
+
+
+<div id="panel-group">
+  <div class="panel panel-default" *ngFor="let item of items; let i = index">
+    <div class="panel-heading" (click)="current = i">
+      <h5 class="panel-title">
+        <div *ngIf="i != current">
+          <i class="fa fa-angle-up"></i> {{item.title}}
+        </div>
+        <div *ngIf="i == current">
+          <i class="fa fa-angle-down"></i> {{item.title}}
+        </div>
+
+        <!--
+       <i class='glyphicon'
+          [class.glyphicon-chevron-right] = "i != current"
+          [class.glyphicon-chevron-down] = "i == current" ></i>   {{item.title}}
+          -->
+      </h5>
+    </div>
+    <div id="collapse1" class="panel-collapse" [class.collapse]='current != i'>
+      <div class="panel-body">{{item.description}}</div>
     </div>
   </div>
 </div>
